# portfolio-squeeze

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.sh  script.py
app/: data_base.py  database.py  main.py  models.py  schemas.py
app/controllers/: car_controller.py  user_controller.py
app/models/: car_model.py  user_model.py
app/routes/: __init__.py  car_routes.py  user_routes.py
app/schemas/: car_schema.py  user_schema.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: database.py  depends.py  main.py
backend/app/controllers/: car_controller.py  user_controller.py
backend/app/models/: car_model.py  user_model.py
backend/app/routes/: __init__.py  car_routes.py  user_routes.py
backend/app/schemas/: user_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 84be3ab15899_first_migration.py  a45584d2b739_add_created_at_in_user.py
db/: data.sql
training/: Dockerfile  docker-compose.yml  requirements.txt
training/app/: create_db.py  database.py  main.py  models.py
