[tool.poetry]
name = "api"
version = "0.1.0"
description = "The backend API for the portfolio squeeze"
authors = ["Lucas Pires <piresnogueiralucas@gmail.com>", "Elle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
validators = "^0.20.0"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.17"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
